--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/LogoMy.png" />
+    <meta name="google-site-verification" content="eEenw4IwfNWBZro-37Q40MtujacYNqw7mK7IjJCpt2s" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
