--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Practice Chef is build to give everyone access to all past Codechef Long Challenges. Do you know CodeChef Long Challenges has one of the best problems ?"
+      content="Practice Chef is built to give everyone access to all past Codechef Long Challenges. Do you know CodeChef Long Challenges has one of the best problems?"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/LogoMy.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
