fixing appreance issues

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/LogoMy.png" />
     <meta name="google-site-verification" content="eEenw4IwfNWBZro-37Q40MtujacYNqw7mK7IjJCpt2s" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#8e24aa" />
     <meta
       name="description"
       content="Practice Chef is built to give everyone access to all past Codechef Long Challenges. Do you know CodeChef Long Challenges has one of the best problems?"
